Removing unnecessary functions

--- a/Notebook_report.ipynb
+++ b/Notebook_report.ipynb
@@ -127,50 +127,7 @@
     "    'show_toolbar': False\n",
     "}\n",
     "\n",
-    "\n",
-    "######################################\n",
-    "# TOC CONTENTS                       #\n",
-    "######################################\n",
-    "\n",
-    "toc_header = '''\n",
-    "***\n",
-    "# Table of Contents:\n",
-    "'''\n",
-    "toc_footer = \"***\"\n",
-    "\n",
-    "goback = \"[Go back to the Table of Contents](#Jovian-analysis-report)  \"\n",
-    "\n",
-    "qc_toc_intro = \"### Quality control metrics:\"\n",
-    "multiqc_link = \"* [Quality control metrics report (MultiQC)](#quality-control-metrics-report)\"\n",
-    "composition_link = \"* [Read based composition of analyzed samples](#read-based-composition-of-analyzed-samples-)\"\n",
-    "\n",
-    "meta_toc_intro = \"### Metagenomics\"\n",
-    "krona_link = \"* [Interactive metagenomics overview](#interactive-metagenomics-overview-krona-)\"\n",
-    "\n",
-    "hm_toc_intro = \"#### &nbsp;&nbsp; Heatmaps\"\n",
-    "hm_sup_link = \"* * [Superkingdom heatmap](#superkingdom-heatmap)\"\n",
-    "hm_vir_link = \"* * [Virus heatmap](#virus-heatmaps)\"\n",
-    "hm_pha_link = \"* * [Phage heatmap](#phage-heatmaps)\"\n",
-    "hm_bac_link = \"* * [Bacteria heatmap](#bacteria-heatmaps)\"\n",
-    "\n",
-    "taxclas_toc_intro = \"### Taxonomic classification\"\n",
-    "taxclas_toc_link = \"* [Classified scaffolds](#classified-scaffolds-)\"\n",
-    "taxunclas_toc_link = \"* [Unclassified scaffolds](#unclassified-scaffolds)\"\n",
-    "\n",
-    "viro_toc_intro = \"### Viral scaffold information\"\n",
-    "virhost_toc_link = \"* [Predicted virus hosts](#predicted-virus-hosts-)\"\n",
-    "vir_typing_toc_intro = \"#### &nbsp;&nbsp; Viral typing results\"\n",
-    "vir_typing_nov_link = \"* * [Norovirus typing tool results](#norovirus-typing-tool-output-)\"\n",
-    "vir_typing_rva_link = \"* * [Rotavirus typing tool results](#rotavirus-a-typing-tool-output-)\"\n",
-    "vir_typing_env_link = \"* * [Enterovirus typing tool results](#enterovirus-typing-tool-output-)\"\n",
-    "vir_typing_hav_link = \"* * [Hepatitis A typing tool results](#hepatitis-a-typing-tool-output-)\"\n",
-    "vir_typing_hev_link = \"* * [Hepatitis E typing tool results](#hepatitis-e-typing-tool-output-)\"\n",
-    "vir_typing_hpv_link = \"* * [Human Papillomavirus typing tool results](#human-papillomavirus-typing-tool-output-)\"\n",
-    "vir_typing_fla_link = \"* * [Flavirus typing tool results](#flavivirus-typing-tool-output-)\"\n",
-    "\n",
-    "scf_viewer_link = \"* [Interactive Scaffold viewer](#scaffold-viewer-)\"\n",
-    "\n",
-    "snp_table_link = \"* [Minority variant table (SNPs)](#minority-variant-table-)\"\n",
+    "goback = \"[Go back to the top](#Jovian-analysis-report)  \"\n",
     "\n",
     "\n",
     "######################################\n",
@@ -180,13 +137,13 @@
     "mqc_cell = '''\n",
     "___\n",
     "## Quality control metrics report  \n",
-    "[Open MultiQC graph in separate tab by clicking here](results/multiqc.html)  \n",
+    "[Open MultiQC graph as a dedicated page by clicking here](results/multiqc.html)  \n",
     "'''\n",
     "\n",
     "composition_cell = '''\n",
     "___\n",
     "### Read-based composition of analyzed samples:  \n",
-    "[Open the barchart in separate tab by clicking here](results/Sample_composition_graph.html)  \n",
+    "[Open the barchart as a dedicated page by clicking here](results/Sample_composition_graph.html)  \n",
     "<br>\n",
     "**Low-quality** reads are those that did not meet the stringency settings as specified in the config file.  \n",
     "**Unclassified** reads are those that could not be assigned to a taxa.  \n",
@@ -201,7 +158,7 @@
     "<br>\n",
     "\n",
     "### Interactive metagenomics overview (Krona):\n",
-    "[Open Krona graph in separate tab by clicking here](results/krona.html)  \n",
+    "[Open Krona graph as a dedicated page by clicking here](results/krona.html)  \n",
     "'''\n",
     "\n",
     "heatmap_cell_header = '''\n",
@@ -210,26 +167,26 @@
     "\n",
     "heatmap_cell_sup = '''\n",
     "#### Superkingdom heatmap  \n",
-    "Open superkingdoms heatmap in a separate tab by clicking [here](results/heatmaps/Superkingdoms_heatmap.html).  \n",
+    "Open superkingdoms heatmap as a dedicated page by clicking [here](results/heatmaps/Superkingdoms_heatmap.html).  \n",
     "'''\n",
     "\n",
     "heatmap_cell_vir = '''\n",
     "#### Virus heatmaps\n",
-    "Open virus heatmap in a separate tab by clicking [here](results/heatmaps/Virus_heatmap.html).  \n",
+    "Open virus heatmap as a dedicated page by clicking [here](results/heatmaps/Virus_heatmap.html).  \n",
     "<br>\n",
     "**Please note, many viruses have no \"`order`\" taxonomic rank so always check the \"`family`\" taxonomic rank.**\n",
     "'''\n",
     "\n",
     "heatmap_cell_pha = '''\n",
     "#### Phage heatmaps\n",
-    "Open phage heatmap in a separate tab by clicking [here](results/heatmaps/Phage_heatmap.html).  \n",
+    "Open phage heatmap as a dedicated page by clicking [here](results/heatmaps/Phage_heatmap.html).  \n",
     "<br>\n",
     "**Please note, many viruses have no \"`order`\" taxonomic rank so always check the \"`family`\" taxonomic rank.**\n",
     "'''\n",
     "\n",
     "heatmap_cell_bac = '''\n",
     "#### Bacteria heatmaps\n",
-    "Open bacteria heatmap in a separate tab by clicking [here](results/heatmaps/Bacteria_heatmap.html).  \n",
+    "Open bacteria heatmap as a dedicated page by clicking [here](results/heatmaps/Bacteria_heatmap.html).  \n",
     "'''\n",
     "\n",
     "clas_scf_cell = '''\n",
@@ -304,7 +261,7 @@
     "**Containing: SNPs and minority variants (quasispecies), predicted ORFs, depth of coverage graph, GC contents graph**\n",
     "___\n",
     "N.B. Depending on the depth of coverage of the selected contig it can be <b>(very) slow, or downright crash your browser</b>. This is a <b>client-sided</b> problem, meaning, your computer isn't powerful enough.  \n",
-    "Open the scaffold viewer in a separate tab by clicking [here](results/IGVjs_index.html).  \n",
+    "Open the scaffold viewer as a dedicated page by clicking [here](results/igv.html).  \n",
     "'''\n",
     "\n",
     "snp_table_cell = '''\n",
@@ -327,7 +284,7 @@
     "\n",
     "snakemake_report_cell = '''\n",
     "### Snakemake summary statistics\n",
-    "[Open Snakemake summary statistics in separate tab by clicking here](snakemake_report.html#stats)\n",
+    "[Open Snakemake summary statistics as a dedicated page by clicking here](results/snakemake_report.html)\n",
     "'''\n",
     "\n",
     "logfile_index = '''\n",
@@ -353,60 +310,6 @@
     "######################################\n",
     "# WRITE-FUNCTIONS                    #\n",
     "######################################\n",
-    "\n",
-    "def toc():\n",
-    "    dp(md(toc_header))\n",
-    "    if os.path.exists(\"results/multiqc.html\"):\n",
-    "        dp(md(qc_toc_intro))\n",
-    "        dp(md(multiqc_link))\n",
-    "    if os.path.exists(\"results/Sample_composition_graph.html\"):\n",
-    "        dp(md(composition_link))\n",
-    "    if os.path.exists(\"results/krona.html\"):\n",
-    "        dp(md(meta_toc_intro))\n",
-    "        dp(md(krona_link))\n",
-    "    if os.path.exists(\"results/heatmaps\"):\n",
-    "        dp(md(hm_toc_intro))\n",
-    "        if os.path.exists(\"results/heatmaps/Superkingdoms_heatmap.html\"):\n",
-    "            dp(md(hm_sup_link))\n",
-    "        if os.path.exists(\"results/heatmaps/Virus_heatmap.html\"):\n",
-    "            dp(md(hm_vir_link))\n",
-    "        if os.path.exists(\"results/heatmaps/Phage_heatmap.html\"):\n",
-    "            dp(md(hm_pha_link))\n",
-    "        if os.path.exists(\"results/heatmaps/Bacteria_heatmap.html\"):\n",
-    "            dp(md(hm_bac_link))\n",
-    "    if os.path.exists(\"results/all_taxClassified.tsv\"):\n",
-    "        dp(md(taxclas_toc_intro))\n",
-    "        dp(md(taxclas_toc_link))\n",
-    "        dp(md(taxunclas_toc_link))\n",
-    "    if os.path.exists(\"results/all_virusHost.tsv\") or os.path.exists(\"results/typingtools\"):\n",
-    "        dp(md(viro_toc_intro))\n",
-    "        if os.path.exists(\"results/all_virusHost.tsv\"):\n",
-    "            dp(md(virhost_toc_link))\n",
-    "        if os.path.exists(\"results/typingtools\"):\n",
-    "            dp(md(vir_typing_toc_intro))\n",
-    "            if os.path.exists(\"results/typingtools/all_nov-TT.csv\") and os.path.getsize(\"results/typingtools/all_nov-TT.csv\") > 0:\n",
-    "                dp(md(vir_typing_nov_link))\n",
-    "            if os.path.exists(\"results/typingtools/all_rva-TT.csv\") and os.path.getsize(\"results/typingtools/all_rva-TT.csv\") > 0:\n",
-    "                dp(md(vir_typing_rva_link))\n",
-    "            if os.path.exists(\"results/typingtools/all_ev-TT.csv\") and os.path.getsize(\"results/typingtools/all_ev-TT.csv\") > 0:\n",
-    "                dp(md(vir_typing_env_link))\n",
-    "            if os.path.exists(\"results/typingtools/all_hav-TT.csv\") and os.path.getsize(\"results/typingtools/all_hav-TT.csv\") > 0:\n",
-    "                dp(md(vir_typing_hav_link))\n",
-    "            if os.path.exists(\"results/typingtools/all_hev-TT.csv\") and os.path.getsize(\"results/typingtools/all_hev-TT.csv\") > 0:\n",
-    "                dp(md(vir_typing_hev_link))\n",
-    "            if os.path.exists(\"results/typingtools/all_pv-TT.csv\") and os.path.getsize(\"results/typingtools/all_pv-TT.csv\") > 0:\n",
-    "                dp(md(vir_typing_hpv_link))\n",
-    "            if os.path.exists(\"results/typingtools/all_flavi-TT.csv\") and os.path.getsize(\"results/typingtools/all_flavi-TT.csv\") > 0:\n",
-    "                dp(md(vir_typing_fla_link))\n",
-    "    if os.path.exists(\"results/igv.html\"):\n",
-    "        dp(md(scf_viewer_link))\n",
-    "    if os.path.exists(\"results/all_filtered_SNPs.tsv\") and os.path.getsize(\"results/all_filtered_SNPs.tsv\") > 0:\n",
-    "        dp(md(snp_table_link))\n",
-    "    dp(md(toc_footer))\n",
-    "\n",
-    "\n",
-    "    \n",
-    "    \n",
     "\n",
     "def multiqc():\n",
     "    if os.path.exists(\"results/multiqc.html\"):\n",
@@ -454,33 +357,34 @@
     "\n",
     "\n",
     "def audit():\n",
-    "    dp(md(logging_header_cell))\n",
-    "    dp(md(\"### Sample sheet\"))\n",
-    "    sheet = open(\"sample_sheet.yaml\", \"r\")\n",
-    "    print(sheet.read())\n",
-    "    dp(md(snakemake_report_cell))\n",
-    "    if os.path.exists(\"results/snakemake_report.html\"):\n",
-    "        dp(fr('results/snakemake_report.html', '100%', '980px'))\n",
-    "    else:\n",
-    "        print(\"\"\"\n",
-    "        We couldn't find a valid snakemake report.\n",
-    "        This indicates that something went wrong during the used workflow. Please run your analysis again.\n",
-    "        \"\"\")\n",
-    "    dp(md(\"### All log-files:\"))\n",
-    "    dp(ht(logfile_index))\n",
-    "    dp(md(\"### Full software list in \\\"Jovian_master\\\" environment:\"))\n",
-    "    conda_log = open(\"results/log_conda.txt\", \"r\")\n",
-    "    print(conda_log.read())\n",
-    "    dp(md(\"### Database versions:\"))\n",
-    "    db_log = open(\"results/log_db.txt\", \"r\")\n",
-    "    print(db_log.read())\n",
-    "    dp(md(\"### Unique methodological \\\"fingerprint\\\":\"))\n",
-    "    id_log = open(\"results/log_git.txt\", \"r\")\n",
-    "    print(id_log.read())\n",
-    "    dp(md(\"### Snakemake config files:\"))\n",
-    "    conf_log = open(\"results/log_config.txt\", \"r\")\n",
-    "    print(conf_log.read())\n",
-    "    dp(md(goback))\n",
+    "    if os.path.exists(\"logs/\"):\n",
+    "        dp(md(logging_header_cell))\n",
+    "        dp(md(\"### Sample sheet\"))\n",
+    "        sheet = open(\"sample_sheet.yaml\", \"r\")\n",
+    "        print(sheet.read())\n",
+    "        dp(md(snakemake_report_cell))\n",
+    "        if os.path.exists(\"results/snakemake_report.html\"):\n",
+    "            dp(fr('results/snakemake_report.html', '100%', '980px'))\n",
+    "        else:\n",
+    "            print(\"\"\"\n",
+    "We couldn't find a valid snakemake report.\n",
+    "This indicates that something went wrong during the used workflow. Please run your analysis again.\n",
+    "            \"\"\")\n",
+    "        dp(md(\"### All log-files:\"))\n",
+    "        dp(ht(logfile_index))\n",
+    "        dp(md(\"### Full software list in \\\"Jovian_master\\\" environment:\"))\n",
+    "        conda_log = open(\"results/log_conda.txt\", \"r\")\n",
+    "        print(conda_log.read())\n",
+    "        dp(md(\"### Database versions:\"))\n",
+    "        db_log = open(\"results/log_db.txt\", \"r\")\n",
+    "        print(db_log.read())\n",
+    "        dp(md(\"### Unique methodological \\\"fingerprint\\\":\"))\n",
+    "        id_log = open(\"results/log_git.txt\", \"r\")\n",
+    "        print(id_log.read())\n",
+    "        dp(md(\"### Snakemake config files:\"))\n",
+    "        conf_log = open(\"results/log_config.txt\", \"r\")\n",
+    "        print(conf_log.read())\n",
+    "        dp(md(goback))\n",
     "\n",
     "\n",
     "def acks():\n",
@@ -660,6 +564,7 @@
     "        ints.dataframe()\n",
     "        if os.path.exists(\"results/BoC_int.tsv\") and os.path.getsize(\"results/BoC_int.tsv\") > 0:\n",
     "            dp(md(\"### Breadth of Coverage overview in nucleotide-numbers\"))\n",
+    "            dp(md(\"It's possible that a table is generated, but not properly displayed here. If this is the case, then please click on `Cell` in the toolbar and then selecting `Run All`.\"))\n",
     "            dp(ints.grid)\n",
     "            dp(md(goback))\n",
     "\n",
@@ -674,6 +579,7 @@
     "        pcts.dataframe()\n",
     "        if os.path.exists(\"results/BoC_pct.tsv\") and os.path.getsize(\"results/BoC_pct.tsv\") > 0:\n",
     "            dp(md(\"### Breath of Coverage overview in percentages\"))\n",
+    "            dp(md(\"It's possible that a table is generated, but not properly displayed here. If this is the case, then please click on `Cell` in the toolbar and then selecting `Run All`.\"))\n",
     "            dp(pcts.grid)\n",
     "            dp(md(goback))\n",
     "\n",
@@ -693,7 +599,6 @@
     "\n",
     "### actually draw the contents\n",
     "\n",
-    "#toc()\n",
     "multiqc()\n",
     "composition()\n",
     "krona()\n",
@@ -746,6 +651,16 @@
    "outputs": [],
    "source": [
     "dp(md(goback))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "time.sleep(3)"
    ]
   },
   {
