rendered html tweak

--- a/Notebook_report.ipynb
+++ b/Notebook_report.ipynb
@@ -54,6 +54,10 @@
     "    font-family: sans-serif;\n",
     "    font-size: 14px !important;\n",
     "    margin-left: 5px;\n",
+    "}\n",
+    "\n",
+    ".rendered_html {\n",
+    "    margin-left: 5px;\n",
     "}"
    ]
   },
