render general SNP table in notebook report

--- a/Notebook_report.ipynb
+++ b/Notebook_report.ipynb
@@ -274,6 +274,12 @@
     "___\n",
     "'''\n",
     "\n",
+    "snips_table_cell = '''\n",
+    "---\n",
+    "## SNP table:\n",
+    "---\n",
+    "'''\n",
+    "\n",
     "snp_table_empty_cell = '''\n",
     "Either no SNP's were classified, maybe because you've set the minimum allele-frequency too high? Or something went wrong, please doublecheck the logfiles below:\n",
     "    **logs/SNP_calling_[sample_name].log**\n",
@@ -549,9 +555,20 @@
     "            dp(md(snp_table_cell))\n",
     "            dp(snps.grid)\n",
     "            dp(md(goback))\n",
-    "        else:\n",
-    "            dp(md(snp_table_cell))\n",
-    "            dp(md(snp_table_empty_cell))\n",
+    "\n",
+    "class ref_snips:\n",
+    "    def dataframe(snips):\n",
+    "        if os.path.exists(\"results/SNPs.tsv\") and os.path.getsize(\"results/SNPs.tsv\") > 0:\n",
+    "            snips.df = pd.read_csv('results/SNPs.tsv', sep=\"\\t\")\n",
+    "            snips.df.set_index('Sample', inplace=True)\n",
+    "            snips.grid = qgrid.show_grid(snips.df, grid_options=boc_grid_options)\n",
+    "            return\n",
+    "    def draw(snips):\n",
+    "        snips.dataframe()\n",
+    "        if os.path.exists(\"results/SNPs.tsv\") and os.path.getsize(\"results/SNPs.tsv\") > 0:\n",
+    "            dp(md(snips_table_cell))\n",
+    "            dp(snips.grid)\n",
+    "            dp(md(goback))\n",
     "\n",
     "def bocheaders():\n",
     "    if os.path.exists(\"results/BoC_int.tsv\") or os.path.exists(\"results/BoC_pct.tsv\"):\n",
@@ -598,6 +615,7 @@
     "virus_typing_hpv = hpv_typing()\n",
     "virus_typing_fla = fla_typing()\n",
     "minority_variant_table = snp_variants()\n",
+    "snip_table = ref_snips()\n",
     "boc_table_ints = breadth_of_cov_ints()\n",
     "boc_table_pcts = breadth_of_cov_pcts()\n",
     "\n",
@@ -630,6 +648,7 @@
     "scaffoldviewer()\n",
     "\n",
     "minority_variant_table.draw()\n",
+    "snip_table.draw()\n",
     "\n",
     "audit()\n",
     "acks()"
