splitting igv html results

--- a/Notebook_report.ipynb
+++ b/Notebook_report.ipynb
@@ -67,7 +67,8 @@
    "metadata": {
     "deleteable": false,
     "init_cell": true,
-    "scrolled": false
+    "scrolled": false,
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -259,7 +260,25 @@
     "'''\n",
     "\n",
     "\n",
-    "scf_viewer_cell  = '''\n",
+    "scf_viewer_cell_ILM_META  = '''\n",
+    "___\n",
+    "## Scaffold viewer:\n",
+    "**Containing: SNPs and minority variants (quasispecies), predicted ORFs, depth of coverage graph, GC contents graph**\n",
+    "___\n",
+    "N.B. Depending on the depth of coverage of the selected contig it can be <b>(very) slow, or downright crash your browser</b>. This is a <b>client-sided</b> problem, meaning, your computer isn't powerful enough.  \n",
+    "Open the scaffold viewer as a dedicated page by clicking [here](results/igv.html).  \n",
+    "'''\n",
+    "\n",
+    "scf_viewer_cell_ILM_REF  = '''\n",
+    "___\n",
+    "## Scaffold viewer:\n",
+    "**Containing: SNPs and minority variants (quasispecies), predicted ORFs, depth of coverage graph, GC contents graph**\n",
+    "___\n",
+    "N.B. Depending on the depth of coverage of the selected contig it can be <b>(very) slow, or downright crash your browser</b>. This is a <b>client-sided</b> problem, meaning, your computer isn't powerful enough.  \n",
+    "Open the scaffold viewer as a dedicated page by clicking [here](results/igv.html).  \n",
+    "'''\n",
+    "\n",
+    "scf_viewer_cell_NANO_REF  = '''\n",
     "___\n",
     "## Scaffold viewer:\n",
     "**Containing: SNPs and minority variants (quasispecies), predicted ORFs, depth of coverage graph, GC contents graph**\n",
@@ -360,10 +379,19 @@
     "            dp(md(goback))\n",
     "\n",
     "def scaffoldviewer():\n",
-    "    if os.path.exists(\"results/igv.html\"):\n",
-    "        dp(md(scf_viewer_cell))\n",
-    "        dp(fr('results/igv.html', '100%', '980px'))\n",
+    "    if os.path.exists(\"results/igv_meta.html\"):\n",
+    "        dp(md(scf_viewer_cell_ILM_META))\n",
+    "        dp(fr('results/igv_meta.html', '100%', '980px'))\n",
     "        dp(md(goback))\n",
+    "    if os.path.exists(\"results/igv_ilr.html\"):\n",
+    "        dp(md(scf_viewer_cell_ILM_REF))\n",
+    "        dp(fr('results/igv_ilr.html', '100%', '980px'))\n",
+    "        dp(md(goback))\n",
+    "    if os.path.exists(\"results/igv_nano.html\"):\n",
+    "        dp(md(scf_viewer_cell_NANO_REF))\n",
+    "        dp(fr('results/igv_nano.html', '100%', '980px'))\n",
+    "        dp(md(goback))\n",
+    "        \n",
     "\n",
     "\n",
     "def audit():\n",
@@ -719,7 +747,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.8-final"
   },
   "toc": {
    "base_numbering": 1,
