use mamba for env-building instead of conda

--- a/Notebook_report.ipynb
+++ b/Notebook_report.ipynb
@@ -266,25 +266,25 @@
     "**Containing: SNPs and minority variants (quasispecies), predicted ORFs, depth of coverage graph, GC contents graph**\n",
     "___\n",
     "N.B. Depending on the depth of coverage of the selected contig it can be <b>(very) slow, or downright crash your browser</b>. This is a <b>client-sided</b> problem, meaning, your computer isn't powerful enough.  \n",
-    "Open the scaffold viewer as a dedicated page by clicking [here](results/igv.html).  \n",
+    "Open the scaffold viewer as a dedicated page by clicking [here](results/igv_meta.html).  \n",
     "'''\n",
     "\n",
     "scf_viewer_cell_ILM_REF  = '''\n",
     "___\n",
-    "## Scaffold viewer:\n",
+    "## Alignment viewer:\n",
     "**Containing: SNPs and minority variants (quasispecies), predicted ORFs, depth of coverage graph, GC contents graph**\n",
     "___\n",
     "N.B. Depending on the depth of coverage of the selected contig it can be <b>(very) slow, or downright crash your browser</b>. This is a <b>client-sided</b> problem, meaning, your computer isn't powerful enough.  \n",
-    "Open the scaffold viewer as a dedicated page by clicking [here](results/igv.html).  \n",
+    "Open the scaffold viewer as a dedicated page by clicking [here](results/igv_ilr.html).  \n",
     "'''\n",
     "\n",
     "scf_viewer_cell_NANO_REF  = '''\n",
     "___\n",
-    "## Scaffold viewer:\n",
-    "**Containing: SNPs and minority variants (quasispecies), predicted ORFs, depth of coverage graph, GC contents graph**\n",
+    "## Alignment viewer:\n",
+    "**Containing: SNPs, depth of coverage graph, GC contents graph**\n",
     "___\n",
     "N.B. Depending on the depth of coverage of the selected contig it can be <b>(very) slow, or downright crash your browser</b>. This is a <b>client-sided</b> problem, meaning, your computer isn't powerful enough.  \n",
-    "Open the scaffold viewer as a dedicated page by clicking [here](results/igv.html).  \n",
+    "Open the scaffold viewer as a dedicated page by clicking [here](results/igv_nano.html).  \n",
     "'''\n",
     "\n",
     "snp_table_cell = '''\n",
